Update project structure

--- a/src/_pug/__layout.pug
+++ b/src/_pug/__layout.pug
@@ -1,9 +1,9 @@
 doctype html
-block vars
+block variables
 html(lang='en')
 	head
 		include _head.pug
+		include _scripts.pug
 	body
 		block body
-		include _scripts.pug
 		block extra_scripts
